Extend an old fix for GtkStatusIcon on Win32

Extend the trick introduced in 2010 by commits:

  9452b271
  017f637a

To other places where it is needed. For detailed informations
see https://bugzilla.gnome.org/show_bug.cgi?id=609622

Fixes #2030
See Merge Request !1003